# easyID

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
easyID/: __init__.py  common_classes.py  easyID.py  settings.py  video_processing.py  webcam_thread.py
easyID/classes/: recognition_result.py  subject_record.py
easyID/threads/: logging_thread.py  recognition_thread.py  video_thread.py  webcam_thread.py
easyID/threads/exporters/: export_to_spreadsheet.py
scripts/: README.md  blueprint.py  subject_info.py  upload_subjects.py
